loggerapp/datalogger/driver/vrmagic/vrmusbcam2.h


// ------------------------------------------------------------------------
/// @defgroup Types                                             Basic Types
// ------------------------------------------------------------------------
/// @{

typedef unsigned char VRmBYTE;

typedef unsigned int VRmDWORD;

typedef unsigned int VRmBOOL;

typedef const char* VRmSTRING;


/// @}
// ------------------------------------------------------------------------
/// @defgroup General                   Error Handling / General Management
// ------------------------------------------------------------------------
/// @{

/// return value values of API function calls
typedef VRM_ENUM _VRmRetVal
{
	/// return value for failed function call
	VRM_FAILED=0,
	/// return value for successful function call
	VRM_SUCCESS=1
} VRmRetVal;
typedef struct VRmUsbCamDeviceInternal* VRmUsbCamDevice;


/// @}
// ------------------------------------------------------------------------
/// @defgroup Images                                         Image Handling
// ------------------------------------------------------------------------
/// @{

/// enum for color formats
typedef VRM_ENUM _VRmColorFormat
{
	/// 32bit Pixel, Order A R G B using 32bit (DWORD) access
	VRM_ARGB_4X8,
	/// 24bit Pixel, Order B G R using 8bit (BYTE) access
	VRM_BGR_3X8,
	/// 16bit Pixel, Order R(5) G(6) B(5) using 16bit (WORD) access
	VRM_RGB_565,
	/// (effective) 16bit Pixel, Order Y U Y V, U+V = color for 2 pixels
	VRM_YUYV_4X8,
	/// 8bit Pixel
	VRM_GRAY_8,
	/// 8bit Pixel, Order G B (even lines) R G (odd lines)
	VRM_BAYER_GBRG_8,
	/// 8bit Pixel, Order B G (even lines) G R (odd lines)
	VRM_BAYER_BGGR_8,
	/// 8bit Pixel, Order R G (even lines) G B (odd lines)
	VRM_BAYER_RGGB_8,
	/// 8bit Pixel, Order G R (even lines) B G (odd lines)
	VRM_BAYER_GRBG_8,
	/// 10bit Pixel, storing upper 8bit in first byte, storing lower 2bit in second byte (lowest bits)
	VRM_GRAY_10,
	/// 10bit Pixel, Order G B (even lines) R G (odd lines)
	VRM_BAYER_GBRG_10,
	/// 10bit Pixel, Order B G (even lines) G R (odd lines)
	VRM_BAYER_BGGR_10,
	/// 10bit Pixel, Order R G (even lines) G B (odd lines)
	VRM_BAYER_RGGB_10,
	/// 10bit Pixel, Order G R (even lines) B G (odd lines)
	VRM_BAYER_GRBG_10,
	/// 16bit Pixel, using 16bit (WORD) access
	VRM_GRAY_16,
	/// 48bit Pixel, using 16bit (WORD) access
	VRM_BGR_3X16,
	/// 16bit Pixel, Order G B (even lines) R G (odd lines)
	VRM_BAYER_GBRG_16,
	/// 16bit Pixel, Order B G (even lines) G R (odd lines)
	VRM_BAYER_BGGR_16,
	/// 16bit Pixel, Order G R (even lines) B G (odd lines)
	VRM_BAYER_RGGB_16,
	/// 16bit Pixel, Order R G (even lines) G B (odd lines)
	VRM_BAYER_GRBG_16,
	/// (effective) 16bit Pixel, Order U Y V Y, U+V = color for 2 pixels
	VRM_UYVY_4X8
}VRmColorFormat;


/// struct for image format
typedef VRM_STRUCT _VRmImageFormat
{
	/// width in pixels
	VRmDWORD m_width;
	/// height in lines
	VRmDWORD m_height;
	/// color format enum
	VRmColorFormat m_color_format;
	/// bit combination of enum VRmImageModifier values
	int m_image_modifier;
}VRmImageFormat;


/// struct for image container
typedef VRM_STRUCT _VRmImage
{
	/// image format struct
	VRmImageFormat m_image_format;
	/// pointer to image buffer
	VRmBYTE* mp_buffer;
	/// pitch = number of bytes from (x, y) to (x, y+1)
	VRmDWORD m_pitch;
	/// timestamp of image in ms since last VRmUsbCamRestartTimer()
	double m_time_stamp;
	/// private = additional internal data
	void* mp_private;
}VRmImage;


/// get Footer Data of Image.
/// NOTE: this is only valid as long as the given image is valid.
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetImageFooter(const VRmImage* fcp_image, const void** fpp_data, VRmDWORD* fp_size);


/// get Size of Image Buffer (mp_buffer)
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetImageBufferSize(const VRmImage* fcp_image, VRmDWORD* fp_size);

/// set Size of Image Buffer (mp_buffer).
/// NOTE: in general, this is only applicable for RLE image buffers.
/// resetting the size to VRM_IMAGE_BUFFER_SIZE_MAX resets the size to the maximum value
/// allowable for the format of the image.
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSetImageBufferSize(const VRmImage* fcp_image, VRmDWORD f_size);


/// get the Image Sensor Port this image originates from.
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetImageSensorPort(const VRmImage* fcp_image, VRmDWORD* fp_port);


/// free VRmImage created by VRmUsbCamNewImage(), VRmUsbCamCopyImage() or VRmUsbCamSetImage()
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamFreeImage(VRmImage** fpp_image);


/// get number of available target format list entries for a given source format
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetTargetFormatListSize(const VRmImageFormat* fcp_source_format, VRmDWORD* fp_size);


/// query target format list entry with index = [0...size-1]
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetTargetFormatListEntry(const VRmImageFormat* fcp_source_format, VRmDWORD f_index, VRmImageFormat* fp_target_format);


/// convert source image to target image.
/// use VRmUsbCamGetTargetFormatListSize() and VRmUsbCamGetTargetFormatListEntry() to generally find out about
/// possible conversions for an image with format fcp_source->m_image_format.
/// use VRmUsbCamGetTargetFormatListSizeEx2() and VRmUsbCamGetTargetFormatListEntryEx2() instead,
/// when you like to convert a source image acquired from the device. this takes additional converter settings
/// of the device into account.
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamConvertImage(const VRmImage* fcp_source, VRmImage* fp_target);


/// get string representation from color format
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetStringFromColorFormat(VRmColorFormat f_color_format, VRmSTRING* fp_string);


/// get pixel depth (in bytes) from color format
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetPixelDepthFromColorFormat(VRmColorFormat f_color_format, VRmDWORD* fp_pixel_depth);


/// compare two image formats.
/// sets target of fp_result to 0 if keys are equal, sets it to 1 otherwise
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamCompareImageFormats(const VRmImageFormat* fcp_format1, const VRmImageFormat* fcp_format2, VRmBOOL* fp_result);


/// get the LUT that is associated with the given VRmImage
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetImageLut(const VRmImage* fcp_image, const VRmBYTE** fpp_lut, VRmDWORD* fp_size);


/// @}
// ------------------------------------------------------------------------
/// @defgroup Grabber                                         Frame Grabber
// ------------------------------------------------------------------------
/// @{

// formats:
// source format = images with this format will be produced by the frame grabber hardware (VRmUsbCamLockNextImageEx())
// target format = images with this format can be produced by the software converter (VRmUsbCamConvertImage())

/// get number of image sensor ports
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetSensorPortListSize(VRmUsbCamDevice f_device, VRmDWORD* fp_size);


/// query image sensor port number entry with index [0...size-1]
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetSensorPortListEntry(VRmUsbCamDevice f_device, VRmDWORD f_index, VRmDWORD* fp_port);


/// get current source format of given sensor port
/// NOTE: single-sensor devices do only have port #1
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetSourceFormatEx(VRmUsbCamDevice f_device, VRmDWORD f_port, VRmImageFormat* fp_source_format);


/// get string description of source format
/// NOTE: single-sensor devices do only have port #1
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetSourceFormatDescription(VRmUsbCamDevice f_device, VRmDWORD f_port, VRmSTRING* fp_string);


/// utility function: query index in sensor port list for specified sensor port number
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamFindSensorPortListIndex(VRmUsbCamDevice f_device, VRmDWORD f_port, VRmDWORD* fp_index);


/// get number of available target format list entries for current source format at given sensor port
/// NOTE: single-sensor devices do only have port #1
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetTargetFormatListSizeEx2(VRmUsbCamDevice f_device, VRmDWORD f_port, VRmDWORD* fp_size);


/// query target format list entry at given sensor port with index = [0...size-1]
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetTargetFormatListEntryEx2(VRmUsbCamDevice f_device, VRmDWORD f_port, VRmDWORD f_index, VRmImageFormat* fp_target_format);


/// start frame grabber.
/// allocates image buffers (queue size) and starts the first image transfers
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamStart(VRmUsbCamDevice f_device);


/// terminates frame grabber, frees unlocked buffers,
/// locked buffers are kept until released with VRmUsbCamUnlockNextImage
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamStop(VRmUsbCamDevice f_device);


/// check if frame grabber is running
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetRunning(VRmUsbCamDevice f_device, VRmBOOL* fp_running);


/// reset frame counter
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamResetFrameCounter(VRmUsbCamDevice f_device);


/// is next image ready.
/// check if the next image from specified sensor port can be immediately accessed
/// via VRmUsbCamLockNextImage(). if not, you can do something else and check again.
/// specify a port of #0 if the port number doesn't matter.
/// NOTE: single-sensor devices do only have port #1
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamIsNextImageReadyEx(VRmUsbCamDevice f_device, VRmDWORD f_port, VRmBOOL* fp_ready);


/// get a locked source image from a specified sensor port.
/// this functions returns with value VRM_FAIL, if no image is locked within approximately f_timeout_ms milliseconds.
/// use f_timeout_ms=0 to wait indefinitely for a locked image (latency optimal, but dangerous, and only applicable for freerunning/constantly triggered applications)
/// use fp_frames_dropped to see how many frames have been dropped before this image (optional, pass NULL if drops don't matter to you).
/// specify a port of #0 if the port number doesn't matter.
/// use VRmUsbCamConvertImage() to convert source image into a traget image.
/// NOTE: single-sensor devices do only have port #1
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamLockNextImageEx2(VRmUsbCamDevice f_device, VRmDWORD f_port, VRmImage** fpp_image, VRmDWORD* fp_frames_dropped, int f_timeout_ms);


/// obsolete API function to get a locked source image.
/// this function is equivalent to VRmUsbCamLockNextImageEx2() with f_timeout_ms=0.
/// WARNING: this function will never return, if no image becomes ready and will potentially stall your application indefinitely.
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamLockNextImageEx(VRmUsbCamDevice f_device, VRmDWORD f_port, VRmImage** fpp_image, VRmDWORD* fp_frames_dropped);


/// unlock source image.
/// you have to Unlock the image which was locked via VRmUsbCamLockNextImage(),
/// do NOT use VRmUsbCamFreeImage() to free this image.
/// NOTE: if the image has successfully been unlocked, *fpp_image will be set to NULL.
/// nevertheless, the function may return an error when re-queuing the buffer into the
/// grabber ring buffer failed.
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamUnlockNextImage(VRmUsbCamDevice f_device, VRmImage** fpp_image);


/// soft trigger.
/// initiate a soft trigger if the current device supports this, otherwise the
/// function fails
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamSoftTrigger(VRmUsbCamDevice f_device);


/// get the LUT that is associated with a specific sensor port.
/// the format modifier returned is a bit combination of VRM_CORRECTION_LUT_xxx constants.
VRM_EXTERN VRmRetVal VRM_API VRmUsbCamGetDeviceLut(VRmUsbCamDevice f_device, VRmDWORD f_port, const VRmBYTE** fpp_lut, VRmDWORD* fp_size, VRmDWORD* fp_format_modifier);