loggerapp/datalogger/driver/vrmagic/vrmusbcamapi.py


# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 483
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetImageFooter'):
    VRmUsbCamGetImageFooter = _libs['libvrmusbcam2.so'].VRmUsbCamGetImageFooter
    VRmUsbCamGetImageFooter.argtypes = [
        POINTER(VRmImage), POINTER(POINTER(None)), POINTER(VRmDWORD)
    ]
    VRmUsbCamGetImageFooter.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 486
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetImageBufferSize'):
    VRmUsbCamGetImageBufferSize = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetImageBufferSize
    VRmUsbCamGetImageBufferSize.argtypes = [
        POINTER(VRmImage), POINTER(VRmDWORD)
    ]
    VRmUsbCamGetImageBufferSize.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 495
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSetImageBufferSize'):
    VRmUsbCamSetImageBufferSize = _libs[
        'libvrmusbcam2.so'].VRmUsbCamSetImageBufferSize
    VRmUsbCamSetImageBufferSize.argtypes = [POINTER(VRmImage), VRmDWORD]
    VRmUsbCamSetImageBufferSize.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 498
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetImageSensorPort'):
    VRmUsbCamGetImageSensorPort = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetImageSensorPort
    VRmUsbCamGetImageSensorPort.argtypes = [
        POINTER(VRmImage), POINTER(VRmDWORD)
    ]
    VRmUsbCamGetImageSensorPort.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 501
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamFreeImage'):
    VRmUsbCamFreeImage = _libs['libvrmusbcam2.so'].VRmUsbCamFreeImage
    VRmUsbCamFreeImage.argtypes = [POINTER(POINTER(VRmImage))]
    VRmUsbCamFreeImage.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 504
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetTargetFormatListSize'):
    VRmUsbCamGetTargetFormatListSize = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetTargetFormatListSize
    VRmUsbCamGetTargetFormatListSize.argtypes = [
        POINTER(VRmImageFormat), POINTER(VRmDWORD)
    ]
    VRmUsbCamGetTargetFormatListSize.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 507
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetTargetFormatListEntry'):
    VRmUsbCamGetTargetFormatListEntry = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetTargetFormatListEntry
    VRmUsbCamGetTargetFormatListEntry.argtypes = [
        POINTER(VRmImageFormat), VRmDWORD, POINTER(VRmImageFormat)
    ]
    VRmUsbCamGetTargetFormatListEntry.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 515
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamConvertImage'):
    VRmUsbCamConvertImage = _libs['libvrmusbcam2.so'].VRmUsbCamConvertImage
    VRmUsbCamConvertImage.argtypes = [POINTER(VRmImage), POINTER(VRmImage)]
    VRmUsbCamConvertImage.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 518
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetStringFromColorFormat'):
    VRmUsbCamGetStringFromColorFormat = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetStringFromColorFormat
    VRmUsbCamGetStringFromColorFormat.argtypes = [
        VRmColorFormat, POINTER(VRmSTRING)
    ]
    VRmUsbCamGetStringFromColorFormat.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 521
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetPixelDepthFromColorFormat'):
    VRmUsbCamGetPixelDepthFromColorFormat = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetPixelDepthFromColorFormat
    VRmUsbCamGetPixelDepthFromColorFormat.argtypes = [
        VRmColorFormat, POINTER(VRmDWORD)
    ]
    VRmUsbCamGetPixelDepthFromColorFormat.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 525
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamCompareImageFormats'):
    VRmUsbCamCompareImageFormats = _libs[
        'libvrmusbcam2.so'].VRmUsbCamCompareImageFormats
    VRmUsbCamCompareImageFormats.argtypes = [
        POINTER(VRmImageFormat), POINTER(VRmImageFormat), POINTER(VRmBOOL)
    ]
    VRmUsbCamCompareImageFormats.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 528
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetImageLut'):
    VRmUsbCamGetImageLut = _libs['libvrmusbcam2.so'].VRmUsbCamGetImageLut
    VRmUsbCamGetImageLut.argtypes = [
        POINTER(VRmImage), POINTER(POINTER(VRmBYTE)), POINTER(VRmDWORD)
    ]
    VRmUsbCamGetImageLut.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 541
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetSensorPortListSize'):
    VRmUsbCamGetSensorPortListSize = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetSensorPortListSize
    VRmUsbCamGetSensorPortListSize.argtypes = [
        VRmUsbCamDevice, POINTER(VRmDWORD)
    ]
    VRmUsbCamGetSensorPortListSize.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 544
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetSensorPortListEntry'):
    VRmUsbCamGetSensorPortListEntry = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetSensorPortListEntry
    VRmUsbCamGetSensorPortListEntry.argtypes = [
        VRmUsbCamDevice, VRmDWORD, POINTER(VRmDWORD)
    ]
    VRmUsbCamGetSensorPortListEntry.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 548
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetSourceFormatEx'):
    VRmUsbCamGetSourceFormatEx = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetSourceFormatEx
    VRmUsbCamGetSourceFormatEx.argtypes = [
        VRmUsbCamDevice, VRmDWORD, POINTER(VRmImageFormat)
    ]
    VRmUsbCamGetSourceFormatEx.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 552
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetSourceFormatDescription'):
    VRmUsbCamGetSourceFormatDescription = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetSourceFormatDescription
    VRmUsbCamGetSourceFormatDescription.argtypes = [
        VRmUsbCamDevice, VRmDWORD, POINTER(VRmSTRING)
    ]
    VRmUsbCamGetSourceFormatDescription.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 555
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamFindSensorPortListIndex'):
    VRmUsbCamFindSensorPortListIndex = _libs[
        'libvrmusbcam2.so'].VRmUsbCamFindSensorPortListIndex
    VRmUsbCamFindSensorPortListIndex.argtypes = [
        VRmUsbCamDevice, VRmDWORD, POINTER(VRmDWORD)
    ]
    VRmUsbCamFindSensorPortListIndex.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 559
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetTargetFormatListSizeEx2'):
    VRmUsbCamGetTargetFormatListSizeEx2 = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetTargetFormatListSizeEx2
    VRmUsbCamGetTargetFormatListSizeEx2.argtypes = [
        VRmUsbCamDevice, VRmDWORD, POINTER(VRmDWORD)
    ]
    VRmUsbCamGetTargetFormatListSizeEx2.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 562
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetTargetFormatListEntryEx2'):
    VRmUsbCamGetTargetFormatListEntryEx2 = _libs[
        'libvrmusbcam2.so'].VRmUsbCamGetTargetFormatListEntryEx2
    VRmUsbCamGetTargetFormatListEntryEx2.argtypes = [
        VRmUsbCamDevice, VRmDWORD, VRmDWORD, POINTER(VRmImageFormat)
    ]
    VRmUsbCamGetTargetFormatListEntryEx2.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 566
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamStart'):
    VRmUsbCamStart = _libs['libvrmusbcam2.so'].VRmUsbCamStart
    VRmUsbCamStart.argtypes = [VRmUsbCamDevice]
    VRmUsbCamStart.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 570
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamStop'):
    VRmUsbCamStop = _libs['libvrmusbcam2.so'].VRmUsbCamStop
    VRmUsbCamStop.argtypes = [VRmUsbCamDevice]
    VRmUsbCamStop.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 573
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetRunning'):
    VRmUsbCamGetRunning = _libs['libvrmusbcam2.so'].VRmUsbCamGetRunning
    VRmUsbCamGetRunning.argtypes = [VRmUsbCamDevice, POINTER(VRmBOOL)]
    VRmUsbCamGetRunning.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 576
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamResetFrameCounter'):
    VRmUsbCamResetFrameCounter = _libs[
        'libvrmusbcam2.so'].VRmUsbCamResetFrameCounter
    VRmUsbCamResetFrameCounter.argtypes = [VRmUsbCamDevice]
    VRmUsbCamResetFrameCounter.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 583
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamIsNextImageReadyEx'):
    VRmUsbCamIsNextImageReadyEx = _libs[
        'libvrmusbcam2.so'].VRmUsbCamIsNextImageReadyEx
    VRmUsbCamIsNextImageReadyEx.argtypes = [
        VRmUsbCamDevice, VRmDWORD, POINTER(VRmBOOL)
    ]
    VRmUsbCamIsNextImageReadyEx.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 592
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamLockNextImageEx2'):
    VRmUsbCamLockNextImageEx2 = _libs[
        'libvrmusbcam2.so'].VRmUsbCamLockNextImageEx2
    VRmUsbCamLockNextImageEx2.argtypes = [VRmUsbCamDevice, VRmDWORD,
                                          POINTER(POINTER(VRmImage)),
                                          POINTER(VRmDWORD), c_int]
    VRmUsbCamLockNextImageEx2.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 597
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamLockNextImageEx'):
    VRmUsbCamLockNextImageEx = _libs[
        'libvrmusbcam2.so'].VRmUsbCamLockNextImageEx
    VRmUsbCamLockNextImageEx.argtypes = [
        VRmUsbCamDevice, VRmDWORD, POINTER(POINTER(VRmImage)),
        POINTER(VRmDWORD)
    ]
    VRmUsbCamLockNextImageEx.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 605
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamUnlockNextImage'):
    VRmUsbCamUnlockNextImage = _libs[
        'libvrmusbcam2.so'].VRmUsbCamUnlockNextImage
    VRmUsbCamUnlockNextImage.argtypes = [
        VRmUsbCamDevice, POINTER(POINTER(VRmImage))
    ]
    VRmUsbCamUnlockNextImage.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 610
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamSoftTrigger'):
    VRmUsbCamSoftTrigger = _libs['libvrmusbcam2.so'].VRmUsbCamSoftTrigger
    VRmUsbCamSoftTrigger.argtypes = [VRmUsbCamDevice]
    VRmUsbCamSoftTrigger.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 614
if hasattr(_libs['libvrmusbcam2.so'], 'VRmUsbCamGetDeviceLut'):
    VRmUsbCamGetDeviceLut = _libs['libvrmusbcam2.so'].VRmUsbCamGetDeviceLut
    VRmUsbCamGetDeviceLut.argtypes = [VRmUsbCamDevice, VRmDWORD,
                                      POINTER(POINTER(VRmBYTE)),
                                      POINTER(VRmDWORD), POINTER(VRmDWORD)]
    VRmUsbCamGetDeviceLut.restype = VRmRetVal

# /home/cg/3Python/beamprofiler/beamprofiler/libraries/vrmagic/vrmusbcam2.h: 630
enum__VRmUserLutFormat = c_int
